Connecting to MongoDB and making an example collection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=${PORT:8080}
+spring.data.mongodb.uri=mongodb+srv://venatorUser:venatorPassword01@cluster1.hvzrj.mongodb.net/VenatorDB?retryWrites=true&w=majority
+spring.data.mongodb.database=VenatorDB
+spring.output.ansi.enabled=ALWAYS
